--- a/integration-test/pom.xml
+++ b/integration-test/pom.xml
@@ -9,4 +9,17 @@
 
     <artifactId>integration-test</artifactId>
 
+    <dependencies>
+        <dependency>
+            <groupId>org.mybatis.generator</groupId>
+            <artifactId>mybatis-generator</artifactId>
+            <version>1.3.5</version>
+            <type>pom</type>
+        </dependency>
+        <dependency>
+            <groupId>org.mybatis.generator</groupId>
+            <artifactId>mybatis-generator-core</artifactId>
+            <version>1.3.5</version>
+        </dependency>
+    </dependencies>
 </project>
