--- a/demo-service/pom.xml
+++ b/demo-service/pom.xml
@@ -14,5 +14,10 @@
             <groupId>org.htnecro.demo</groupId>
             <artifactId>integration-test</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.mybatis.spring.boot</groupId>
+            <artifactId>mybatis-spring-boot-starter</artifactId>
+            <version>1.3.0</version>
+        </dependency>
     </dependencies>
 </project>
