--- a/integration-test/pom.xml
+++ b/integration-test/pom.xml
@@ -9,17 +9,35 @@
 
     <artifactId>integration-test</artifactId>
 
+    <properties>
+        <mybatis-generator.version>1.3.5</mybatis-generator.version>
+    </properties>
+
     <dependencies>
         <dependency>
             <groupId>org.mybatis.generator</groupId>
             <artifactId>mybatis-generator</artifactId>
-            <version>1.3.5</version>
+            <version>${mybatis-generator.version}</version>
             <type>pom</type>
         </dependency>
         <dependency>
             <groupId>org.mybatis.generator</groupId>
             <artifactId>mybatis-generator-core</artifactId>
-            <version>1.3.5</version>
+            <version>${mybatis-generator.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.hsqldb</groupId>
+            <artifactId>hsqldb</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.mybatis.spring.boot</groupId>
+            <artifactId>mybatis-spring-boot-starter</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>druid-spring-boot-starter</artifactId>
         </dependency>
     </dependencies>
 </project>
