--- a/pom.xml
+++ b/pom.xml
@@ -12,8 +12,8 @@
     <description>Kotlin Spring Boot Demo</description>
 
     <modules>
-        <module>demo-service</module>
-        <module>demo-web</module>
+        <module>spring-demo-service</module>
+        <module>spring-demo-web</module>
         <module>integration-test</module>
     </modules>
 
@@ -22,7 +22,7 @@
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <java.version>1.8</java.version>
         <kotlin.version>1.1.4</kotlin.version>
-        <spring.boot.version>1.5.4.RELEASE</spring.boot.version>
+        <spring.boot.version>1.5.6.RELEASE</spring.boot.version>
     </properties>
 
     <dependencyManagement>
@@ -37,7 +37,7 @@
 
             <dependency>
                 <groupId>org.htnecro.demo</groupId>
-                <artifactId>demo-service</artifactId>
+                <artifactId>spring-demo-service</artifactId>
                 <version>${project.version}</version>
             </dependency>
             <dependency>
@@ -45,6 +45,17 @@
                 <artifactId>integration-test</artifactId>
                 <version>${project.version}</version>
                 <scope>test</scope>
+            </dependency>
+
+            <dependency>
+                <groupId>org.mybatis.spring.boot</groupId>
+                <artifactId>mybatis-spring-boot-starter</artifactId>
+                <version>1.3.1</version>
+            </dependency>
+            <dependency>
+                <groupId>com.alibaba</groupId>
+                <artifactId>druid-spring-boot-starter</artifactId>
+                <version>1.1.2</version>
             </dependency>
 
         </dependencies>
