--- a/spring-demo-service/pom.xml
+++ b/spring-demo-service/pom.xml
@@ -7,17 +7,26 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>demo-service</artifactId>
+    <artifactId>spring-demo-service</artifactId>
 
     <dependencies>
         <dependency>
             <groupId>org.htnecro.demo</groupId>
             <artifactId>integration-test</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+        </dependency>
         <dependency>
             <groupId>org.mybatis.spring.boot</groupId>
             <artifactId>mybatis-spring-boot-starter</artifactId>
-            <version>1.3.0</version>
         </dependency>
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>druid-spring-boot-starter</artifactId>
+        </dependency>
+
     </dependencies>
 </project>
