--- a/spring-demo-web/pom.xml
+++ b/spring-demo-web/pom.xml
@@ -6,12 +6,12 @@
         <version>1.0.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-    <artifactId>demo-web</artifactId>
+    <artifactId>spring-demo-web</artifactId>
 
     <dependencies>
         <dependency>
             <groupId>org.htnecro.demo</groupId>
-            <artifactId>demo-service</artifactId>
+            <artifactId>spring-demo-service</artifactId>
         </dependency>
         <dependency>
             <groupId>org.htnecro.demo</groupId>
