--- a/integration-test/pom.xml
+++ b/integration-test/pom.xml
@@ -15,6 +15,11 @@
 
     <dependencies>
         <dependency>
+            <groupId>org.htnecro.demo</groupId>
+            <artifactId>spring-demo-common</artifactId>
+        </dependency>
+
+        <dependency>
             <groupId>org.mybatis.generator</groupId>
             <artifactId>mybatis-generator</artifactId>
             <version>${mybatis-generator.version}</version>
