--- a/integration-test/src/test/resources/application.yml
+++ b/integration-test/src/test/resources/application.yml
@@ -14,3 +14,14 @@ spring:
       test-on-borrow: false
       test-on-return: false
       filters: stat,wall,log4j2
+
+  jackson:
+    date-format: yyyy-MM-dd HH:mm:ss
+    time-zone: GMT+8
+
+mybatis:
+  type-aliases-package: org.htnecro.demo.meta
+  mapper-locations: org.htnecro.demo.mapper
+  configuration:
+    map-underscore-to-camel-case: true
+    default-enum-type-handler: org.htnecro.demo.typehandler.IntValueEnumTypeHandler
