--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
     <description>Kotlin Spring Boot Demo</description>
 
     <modules>
+        <module>spring-demo-common</module>
         <module>spring-demo-service</module>
         <module>spring-demo-web</module>
         <module>integration-test</module>
@@ -35,6 +36,11 @@
                 <scope>import</scope>
             </dependency>
 
+            <dependency>
+                <groupId>org.htnecro.demo</groupId>
+                <artifactId>spring-demo-common</artifactId>
+                <version>${project.version}</version>
+            </dependency>
             <dependency>
                 <groupId>org.htnecro.demo</groupId>
                 <artifactId>spring-demo-service</artifactId>
@@ -100,7 +106,7 @@
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-compiler-plugin</artifactId>
-                    <version>3.5.1</version>
+                    <version>3.6.2</version>
                     <configuration>
                         <source>${java.version}</source>
                         <target>${java.version}</target>
