--- a/spring-demo-service/pom.xml
+++ b/spring-demo-service/pom.xml
@@ -12,6 +12,10 @@
     <dependencies>
         <dependency>
             <groupId>org.htnecro.demo</groupId>
+            <artifactId>spring-demo-common</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.htnecro.demo</groupId>
             <artifactId>integration-test</artifactId>
         </dependency>
 
@@ -19,14 +23,7 @@
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
         </dependency>
-        <dependency>
-            <groupId>org.mybatis.spring.boot</groupId>
-            <artifactId>mybatis-spring-boot-starter</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>com.alibaba</groupId>
-            <artifactId>druid-spring-boot-starter</artifactId>
-        </dependency>
+
 
     </dependencies>
 </project>
