--- a/spring-demo-web/src/main/resources/application.yml
+++ b/spring-demo-web/src/main/resources/application.yml
@@ -17,3 +17,14 @@ spring:
       test-on-borrow: false
       test-on-return: false
       filters: stat,wall,log4j2
+
+  jackson:
+    date-format: yyyy-MM-dd HH:mm:ss
+    time-zone: GMT+8
+
+mybatis:
+  type-aliases-package: org.htnecro.demo.meta
+  mapper-locations: classpath*:mapper/*Mapper.xml
+  configuration:
+    map-underscore-to-camel-case: true
+    default-enum-type-handler: org.htnecro.demo.typehandler.IntValueEnumTypeHandler
