--- a/pom.xml
+++ b/pom.xml
@@ -63,7 +63,11 @@
                 <artifactId>druid-spring-boot-starter</artifactId>
                 <version>1.1.2</version>
             </dependency>
-
+            <dependency>
+                <groupId>org.testng</groupId>
+                <artifactId>testng</artifactId>
+                <version>6.11</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
@@ -92,12 +96,6 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-log4j2</artifactId>
         </dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-test</artifactId>
-            <scope>test</scope>
-        </dependency>
-
     </dependencies>
 
     <build>
