--- a/spring-demo-web/src/main/resources/application.yml
+++ b/spring-demo-web/src/main/resources/application.yml
@@ -1,4 +1,5 @@
 spring:
+
   datasource:
     url: jdbc:mysql://localhost:3306/spring-boot-demo?useSSL=false
     username: root
@@ -21,6 +22,10 @@ spring:
   jackson:
     date-format: yyyy-MM-dd HH:mm:ss
     time-zone: GMT+8
+  http:
+    multipart:
+      enabled: true
+      max-file-size: 10MB
 
 mybatis:
   type-aliases-package: org.htnecro.demo.meta
