--- a/pom.xml
+++ b/pom.xml
@@ -21,8 +21,8 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <java.version>1.8</java.version>
-        <kotlin.version>1.2.10</kotlin.version>
-        <spring.boot.version>1.5.6.RELEASE</spring.boot.version>
+        <kotlin.version>1.2.41</kotlin.version>
+        <spring.boot.version>2.0.2.RELEASE</spring.boot.version>
     </properties>
 
     <dependencyManagement>
@@ -69,7 +69,7 @@
     <dependencies>
         <dependency>
             <groupId>org.jetbrains.kotlin</groupId>
-            <artifactId>kotlin-stdlib-jre8</artifactId>
+            <artifactId>kotlin-stdlib-jdk8</artifactId>
             <version>${kotlin.version}</version>
         </dependency>
         <dependency>
