--- a/spring-demo-test/pom.xml
+++ b/spring-demo-test/pom.xml
@@ -17,6 +17,11 @@
             <artifactId>aspectjweaver</artifactId>
             <version>1.9.2</version>
         </dependency>
+        <dependency>
+            <groupId>com.rabbitmq</groupId>
+            <artifactId>amqp-client</artifactId>
+            <version>5.6.0</version>
+        </dependency>
     </dependencies>
 
 </project>
