--- a/pom.xml
+++ b/pom.xml
@@ -22,8 +22,8 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <java.version>1.8</java.version>
-        <kotlin.version>1.3.20</kotlin.version>
-        <spring.boot.version>2.1.5.RELEASE</spring.boot.version>
+        <kotlin.version>1.3.50</kotlin.version>
+        <spring.boot.version>2.2.0.RC1</spring.boot.version>
     </properties>
 
     <dependencyManagement>
@@ -228,5 +228,20 @@
             </plugin>
         </plugins>
     </build>
+
+    <repositories>
+        <repository>
+            <id>spring-milestones</id>
+            <name>Spring Milestones</name>
+            <url>https://repo.spring.io/milestone</url>
+        </repository>
+    </repositories>
+    <pluginRepositories>
+        <pluginRepository>
+            <id>spring-milestones</id>
+            <name>Spring Milestones</name>
+            <url>https://repo.spring.io/milestone</url>
+        </pluginRepository>
+    </pluginRepositories>
 
 </project>
