--- a/spring-demo-service/src/test/resources/application.yml
+++ b/spring-demo-service/src/test/resources/application.yml
@@ -2,6 +2,10 @@ spring:
   datasource:
     url: jdbc:h2:mem:test;MODE=MySQL
     driver-class-name: org.h2.Driver
+  jpa:
+    show-sql: true
+    hibernate:
+      ddl-auto: none
 
 mybatis:
   type-aliases-package: org.htnecro.demo.meta
