--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,7 @@
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <java.version>1.8</java.version>
         <kotlin.version>1.3.50</kotlin.version>
-        <spring.boot.version>2.2.0.RC1</spring.boot.version>
+        <spring.boot.version>2.2.0.RELEASE</spring.boot.version>
     </properties>
 
     <dependencyManagement>
